--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@ body, html {
     <center>
       <h4>Position Detector</h4>
       <br>
-      <img src="{{ url_for('video') }}"  height="50%"/>
+      <!-- <img src="{{ url_for('analyze') }}"  height="50%"/> -->
     </center>
     
   </div>
